# django-createsuperuser.py

./: README.md  requirements.txt  setup.cfg  setup.py
django_createsuperuser/: __main__.py  apps.py
django_createsuperuser/management/commands/: createsuperuser.py
