# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-createsuperuser
version = 2019.9.7
url = https://github.com/andrewp-as-is/django-createsuperuser.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django superuser

[options]
install_requires =
	Django>1.0
	click
	setuptools
packages =
	django_createsuperuser
	django_createsuperuser.management
	django_createsuperuser.management.commands
